# dcm-view

./: .gitignore  AGENTS.md  Cargo.toml  OPTIMIZATION_PLAN.md  README.md  SYSTEM_SPEC.md  build.rs  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  api.ts
frontend/src/lib/: FileTabs.svelte  FrameSlider.svelte  ImageViewport.svelte  StatusBar.svelte  TagPanel.svelte  ViewerToolbar.svelte  viewerTools.ts
frontend/src/lib/workers/: wlRenderer.worker.ts
python/: __init__.py
python/dcmview_py/: __init__.py  __main__.py  wrapper.py
python/tests/: __init__.py  test_wrapper.py
src/: annotations.rs  lib.rs  loader.rs  main.rs  pixels.rs  server.rs  tunnel.rs  types.rs
tests/: integration.rs
tests/integration/: annotations_endpoint.rs  loader_discovery.rs  pixels_jp2_passthrough.rs  pixels_jpeg_passthrough.rs  pixels_raw_endpoint.rs  pixels_uncompressed.rs  server_minimal.rs  support.rs  tags_endpoint.rs  tunnel_lifecycle.rs
